[gd_scene load_steps=34 format=3 uid="uid://cqyyhuh1ivaxa"]

[ext_resource type="Texture2D" uid="uid://cgx5celc7w0wu" path="res://assets/black_screen.png" id="1_a8tgh"]
[ext_resource type="Script" path="res://shopping_game.gd" id="1_kfvar"]
[ext_resource type="Texture2D" uid="uid://cdbektym4wupo" path="res://assets/white_phone_screen.png" id="2_dx8qc"]
[ext_resource type="Texture2D" uid="uid://u5tcqplak11h" path="res://assets/shopping/thumbnails/controller.png" id="3_ckeda"]
[ext_resource type="Texture2D" uid="uid://uyoiyfy6j4v0" path="res://assets/shopping/thumbnails/purse.png" id="4_by2v8"]
[ext_resource type="Texture2D" uid="uid://bwimhpfctatvp" path="res://assets/shopping/thumbnails/camera.png" id="5_kbncn"]
[ext_resource type="Texture2D" uid="uid://dfevy3mlig555" path="res://assets/shopping/thumbnails/cbd.png" id="6_dec6l"]
[ext_resource type="PackedScene" uid="uid://x78yli4ckosk" path="res://shopping_button.tscn" id="7_nyuqs"]
[ext_resource type="Texture2D" uid="uid://crfb05rm7qw7o" path="res://assets/shopping/cart_icon.png" id="8_emk7l"]
[ext_resource type="Texture2D" uid="uid://t6sgv57f6v7d" path="res://assets/shopping/cart_num.png" id="9_yhd8g"]
[ext_resource type="Texture2D" uid="uid://6yiqs8cbiskx" path="res://assets/shopping/thumbnails/giftcard.png" id="10_su3ks"]
[ext_resource type="Texture2D" uid="uid://kliuu1ywcl" path="res://assets/shopping/thumbnails/sex_toy.png" id="11_0vm6k"]
[ext_resource type="Texture2D" uid="uid://ccbn2d047io5i" path="res://assets/shopping/thumbnails/tv.png" id="12_5jmtb"]
[ext_resource type="Texture2D" uid="uid://c53mx0bt3fgxg" path="res://assets/shopping/thumbnails/pineapple.png" id="13_7tgjp"]
[ext_resource type="Texture2D" uid="uid://csuexvixd602f" path="res://assets/shopping/thumbnails/astrology.png" id="14_3mtxv"]
[ext_resource type="Texture2D" uid="uid://cc5yr6rb4e4ov" path="res://assets/shopping/thumbnails/crystal.png" id="15_x15ne"]
[ext_resource type="Texture2D" uid="uid://cvchn1rv34jlk" path="res://assets/shopping/thumbnails/headphones.png" id="16_n1yxf"]
[ext_resource type="Texture2D" uid="uid://dclsfakkpqwxm" path="res://assets/shopping/thumbnails/plant.png" id="17_skogw"]
[ext_resource type="Texture2D" uid="uid://oon6kn047pgi" path="res://icon.svg" id="19_o6jy5"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nkdm3"]
size = Vector2(288.998, 118.003)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pq12c"]
size = Vector2(287.001, 116.001)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_apohx"]
size = Vector2(288, 121.001)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_an0g8"]
size = Vector2(290.001, 121.005)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_flrjd"]
size = Vector2(292, 114.736)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_hsne3"]
size = Vector2(283, 114.737)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mkpvu"]
size = Vector2(284, 111.002)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvr03"]
size = Vector2(280.001, 114.739)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nxbs6"]
size = Vector2(289, 113.512)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t1nnp"]
size = Vector2(290.001, 114.74)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mbbhe"]
size = Vector2(290.001, 116.742)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ciwmp"]
size = Vector2(289.001, 118.741)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_gfxgo"]
size = Vector2(126, 129)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bphmn"]
size = Vector2(128, 130)

[node name="shopping_game" type="Node2D"]
script = ExtResource("1_kfvar")

[node name="black_screen" type="Sprite2D" parent="."]
position = Vector2(947, 537)
scale = Vector2(1.04688, 1.06296)
texture = ExtResource("1_a8tgh")
metadata/_edit_lock_ = true

[node name="white_phone_screen" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(959.999, 820)
rotation = 1.5708
scale = Vector2(4.31132, 1.5)
texture = ExtResource("2_dx8qc")

[node name="headphones" type="Sprite2D" parent="white_phone_screen"]
position = Vector2(-376.915, 118.002)
rotation = -1.5708
scale = Vector2(0.333333, 0.115974)
texture = ExtResource("16_n1yxf")

[node name="shopping_button5" parent="white_phone_screen/headphones" instance=ExtResource("7_nyuqs")]
position = Vector2(2, 386)
scale = Vector2(0.578682, 0.391667)

[node name="item_1" type="Area2D" parent="white_phone_screen/headphones"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="white_phone_screen/headphones/item_1"]
position = Vector2(1.49792, 385.002)
shape = SubResource("RectangleShape2D_nkdm3")

[node name="sex_toy" type="Sprite2D" parent="white_phone_screen"]
position = Vector2(-376.219, -113.997)
rotation = -1.5708
scale = Vector2(0.333333, 0.115974)
texture = ExtResource("11_0vm6k")

[node name="shopping_button6" parent="white_phone_screen/sex_toy" instance=ExtResource("7_nyuqs")]
position = Vector2(0, 408)
scale = Vector2(0.578682, 0.391667)

[node name="item_2" type="Area2D" parent="white_phone_screen/sex_toy"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="white_phone_screen/sex_toy/item_2"]
position = Vector2(0.500488, 407.999)
shape = SubResource("RectangleShape2D_pq12c")

[node name="crystal" type="Sprite2D" parent="white_phone_screen"]
position = Vector2(-272.77, 120.669)
rotation = -1.5708
scale = Vector2(0.333333, 0.115974)
texture = ExtResource("15_x15ne")

[node name="shopping_button7" parent="white_phone_screen/crystal" instance=ExtResource("7_nyuqs")]
position = Vector2(14, 394)
scale = Vector2(0.578682, 0.391667)

[node name="item_3" type="Area2D" parent="white_phone_screen/crystal"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="white_phone_screen/crystal/item_3"]
position = Vector2(14.0016, 393.498)
shape = SubResource("RectangleShape2D_apohx")

[node name="plant" type="Sprite2D" parent="white_phone_screen"]
position = Vector2(-273.931, -120.664)
rotation = -1.5708
scale = Vector2(0.333333, 0.115974)
texture = ExtResource("17_skogw")

[node name="shopping_button8" parent="white_phone_screen/plant" instance=ExtResource("7_nyuqs")]
position = Vector2(-10, 408)
scale = Vector2(0.578682, 0.391667)

[node name="item_4" type="Area2D" parent="white_phone_screen/plant"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="white_phone_screen/plant/item_4"]
position = Vector2(-10.9978, 407.505)
shape = SubResource("RectangleShape2D_an0g8")

[node name="controller" type="Sprite2D" parent="white_phone_screen"]
position = Vector2(-124.958, 123.334)
rotation = -1.5708
scale = Vector2(0.333333, 0.115974)
texture = ExtResource("3_ckeda")

[node name="shopping_button" parent="white_phone_screen/controller" instance=ExtResource("7_nyuqs")]
position = Vector2(8.00134, 380)
scale = Vector2(0.578683, 0.391667)

[node name="item_5" type="Area2D" parent="white_phone_screen/controller"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="white_phone_screen/controller/item_5"]
position = Vector2(8.00085, 380.101)
shape = SubResource("RectangleShape2D_flrjd")

[node name="purse" type="Sprite2D" parent="white_phone_screen"]
position = Vector2(-124.959, -126.666)
rotation = -1.5708
scale = Vector2(0.333333, 0.115974)
texture = ExtResource("4_by2v8")

[node name="shopping_button2" parent="white_phone_screen/purse" instance=ExtResource("7_nyuqs")]
position = Vector2(-29.9988, 380)
scale = Vector2(0.578683, 0.391667)

[node name="item_6" type="Area2D" parent="white_phone_screen/purse"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="white_phone_screen/purse/item_6"]
position = Vector2(-29.4988, 378.105)
shape = SubResource("RectangleShape2D_hsne3")

[node name="camera" type="Sprite2D" parent="white_phone_screen"]
position = Vector2(-26.2101, 115.333)
rotation = -1.5708
scale = Vector2(0.333333, 0.115974)
texture = ExtResource("5_kbncn")

[node name="shopping_button3" parent="white_phone_screen/camera" instance=ExtResource("7_nyuqs")]
position = Vector2(-3.99866, 400)
scale = Vector2(0.578683, 0.391667)

[node name="item_7" type="Area2D" parent="white_phone_screen/camera"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="white_phone_screen/camera/item_7"]
position = Vector2(-3.9989, 400.5)
shape = SubResource("RectangleShape2D_mkpvu")

[node name="cbd" type="Sprite2D" parent="white_phone_screen"]
position = Vector2(-28.7009, -126.667)
rotation = -1.5708
scale = Vector2(0.333333, 0.115974)
texture = ExtResource("6_dec6l")

[node name="shopping_button4" parent="white_phone_screen/cbd" instance=ExtResource("7_nyuqs")]
position = Vector2(-7.99878, 418)
scale = Vector2(0.578683, 0.391667)

[node name="item_8" type="Area2D" parent="white_phone_screen/cbd"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="white_phone_screen/cbd/item_8"]
position = Vector2(-7.99854, 420.106)
shape = SubResource("RectangleShape2D_wvr03")

[node name="tv" type="Sprite2D" parent="white_phone_screen"]
position = Vector2(114, 115.998)
rotation = -1.5708
scale = Vector2(0.333333, 0.115974)
texture = ExtResource("12_5jmtb")

[node name="shopping_button10" parent="white_phone_screen/tv" instance=ExtResource("7_nyuqs")]
position = Vector2(12, 390)
scale = Vector2(0.578682, 0.391667)

[node name="item_9" type="Area2D" parent="white_phone_screen/tv"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="white_phone_screen/tv/item_9"]
position = Vector2(11.5004, 390.265)
shape = SubResource("RectangleShape2D_nxbs6")

[node name="pineapple" type="Sprite2D" parent="white_phone_screen"]
position = Vector2(113.251, -116.002)
rotation = -1.5708
scale = Vector2(0.333333, 0.115974)
texture = ExtResource("13_7tgjp")

[node name="shopping_button11" parent="white_phone_screen/pineapple" instance=ExtResource("7_nyuqs")]
position = Vector2(-18, 384)
scale = Vector2(0.578682, 0.391667)

[node name="item_10" type="Area2D" parent="white_phone_screen/pineapple"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="white_phone_screen/pineapple/item_10"]
position = Vector2(-16.9993, 386.107)
shape = SubResource("RectangleShape2D_t1nnp")

[node name="astrology" type="Sprite2D" parent="white_phone_screen"]
position = Vector2(209.509, 117.331)
rotation = -1.5708
scale = Vector2(0.333333, 0.115974)
texture = ExtResource("14_3mtxv")

[node name="shopping_button9" parent="white_phone_screen/astrology" instance=ExtResource("7_nyuqs")]
position = Vector2(12, 404)
scale = Vector2(0.578682, 0.391667)

[node name="item_11" type="Area2D" parent="white_phone_screen/astrology"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="white_phone_screen/astrology/item_11"]
position = Vector2(11.0018, 403.109)
shape = SubResource("RectangleShape2D_mbbhe")

[node name="giftcard" type="Sprite2D" parent="white_phone_screen"]
position = Vector2(209.277, -125.336)
rotation = -1.5708
scale = Vector2(0.333333, 0.115974)
texture = ExtResource("10_su3ks")

[node name="shopping_button12" parent="white_phone_screen/giftcard" instance=ExtResource("7_nyuqs")]
position = Vector2(-18, 416)
scale = Vector2(0.578682, 0.391667)

[node name="item_12" type="Area2D" parent="white_phone_screen/giftcard"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="white_phone_screen/giftcard/item_12"]
position = Vector2(-16.4985, 416.108)
shape = SubResource("RectangleShape2D_ciwmp")

[node name="cart_icon" type="Sprite2D" parent="."]
position = Vector2(1308, 50)
scale = Vector2(0.2, 0.2)
texture = ExtResource("8_emk7l")

[node name="cart_num" type="Sprite2D" parent="."]
position = Vector2(1308, 60)
scale = Vector2(0.08, 0.08)
texture = ExtResource("9_yhd8g")

[node name="items" type="Label" parent="."]
offset_left = 1288.0
offset_top = 41.0
offset_right = 1328.0
offset_bottom = 79.0
theme_override_font_sizes/font_size = 25
text = "$"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="."]
offset_left = 1142.0
offset_top = 30.0
offset_right = 1274.0
offset_bottom = 73.0
theme_override_font_sizes/font_size = 25
text = "Go to Cart"

[node name="Up" type="Sprite2D" parent="."]
position = Vector2(962, 71)
texture = ExtResource("19_o6jy5")

[node name="top" type="Area2D" parent="Up"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Up/top"]
position = Vector2(-1, 0.5)
shape = SubResource("RectangleShape2D_gfxgo")

[node name="Down" type="Sprite2D" parent="."]
position = Vector2(970, 1008)
texture = ExtResource("19_o6jy5")

[node name="bottom" type="Area2D" parent="Down"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Down/bottom"]
shape = SubResource("RectangleShape2D_bphmn")

[connection signal="mouse_entered" from="white_phone_screen/headphones/item_1" to="." method="_on_item_1_mouse_entered"]
[connection signal="mouse_exited" from="white_phone_screen/headphones/item_1" to="." method="_on_item_1_mouse_exited"]
[connection signal="mouse_entered" from="white_phone_screen/sex_toy/item_2" to="." method="_on_item_2_mouse_entered"]
[connection signal="mouse_exited" from="white_phone_screen/sex_toy/item_2" to="." method="_on_item_2_mouse_exited"]
[connection signal="mouse_entered" from="white_phone_screen/crystal/item_3" to="." method="_on_item_3_mouse_entered"]
[connection signal="mouse_exited" from="white_phone_screen/crystal/item_3" to="." method="_on_item_3_mouse_exited"]
[connection signal="mouse_entered" from="white_phone_screen/plant/item_4" to="." method="_on_item_4_mouse_entered"]
[connection signal="mouse_exited" from="white_phone_screen/plant/item_4" to="." method="_on_item_4_mouse_exited"]
[connection signal="mouse_entered" from="white_phone_screen/controller/item_5" to="." method="_on_item_5_mouse_entered"]
[connection signal="mouse_exited" from="white_phone_screen/controller/item_5" to="." method="_on_item_5_mouse_exited"]
[connection signal="mouse_entered" from="white_phone_screen/purse/item_6" to="." method="_on_item_6_mouse_entered"]
[connection signal="mouse_exited" from="white_phone_screen/purse/item_6" to="." method="_on_item_6_mouse_exited"]
[connection signal="mouse_entered" from="white_phone_screen/camera/item_7" to="." method="_on_item_7_mouse_entered"]
[connection signal="mouse_exited" from="white_phone_screen/camera/item_7" to="." method="_on_item_7_mouse_exited"]
[connection signal="mouse_entered" from="white_phone_screen/cbd/item_8" to="." method="_on_item_8_mouse_entered"]
[connection signal="mouse_exited" from="white_phone_screen/cbd/item_8" to="." method="_on_item_8_mouse_exited"]
[connection signal="mouse_entered" from="white_phone_screen/tv/item_9" to="." method="_on_item_9_mouse_entered"]
[connection signal="mouse_exited" from="white_phone_screen/tv/item_9" to="." method="_on_item_9_mouse_exited"]
[connection signal="mouse_entered" from="white_phone_screen/pineapple/item_10" to="." method="_on_item_10_mouse_entered"]
[connection signal="mouse_exited" from="white_phone_screen/pineapple/item_10" to="." method="_on_item_10_mouse_exited"]
[connection signal="mouse_entered" from="white_phone_screen/astrology/item_11" to="." method="_on_item_11_mouse_entered"]
[connection signal="mouse_exited" from="white_phone_screen/astrology/item_11" to="." method="_on_item_11_mouse_exited"]
[connection signal="mouse_entered" from="white_phone_screen/giftcard/item_12" to="." method="_on_item_12_mouse_entered"]
[connection signal="mouse_exited" from="white_phone_screen/giftcard/item_12" to="." method="_on_item_12_mouse_exited"]
[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="mouse_entered" from="Up/top" to="." method="_on_top_mouse_entered"]
[connection signal="mouse_exited" from="Up/top" to="." method="_on_top_mouse_exited"]
[connection signal="mouse_entered" from="Down/bottom" to="." method="_on_bottom_mouse_entered"]
[connection signal="mouse_exited" from="Down/bottom" to="." method="_on_bottom_mouse_exited"]
